--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "postinstall": "prisma generate",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
+    "@neondatabase/serverless": "^0.9.0",
     "@prisma/client": "^5.12.1",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.20.14",
+    "drizzle-orm": "^0.30.8",
     "next": "14.1.4",
+    "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1"
