--- a/package.json
+++ b/package.json
@@ -12,14 +12,28 @@
     "@clerk/nextjs": "^4.29.12",
     "@neondatabase/serverless": "^0.9.0",
     "@prisma/client": "^5.12.1",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "ai": "^3.0.21",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.20.14",
     "drizzle-orm": "^0.30.8",
+    "lucide-react": "^0.368.0",
     "next": "14.1.4",
+    "next-themes": "^0.3.0",
+    "openai": "^4.33.0",
     "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "sooner": "^1.1.4",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
