--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.10",
     "@clerk/nextjs": "^4.29.12",
+    "@google/generative-ai": "^0.14.0",
     "@neondatabase/serverless": "^0.9.0",
     "@prisma/client": "^5.12.1",
     "@radix-ui/react-avatar": "^1.0.4",
